--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "jest"
+    "test": "mocha 'tests/**/*.test.js'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2"
+    "@babel/preset-env": "^7.24.6",
+    "@babel/register": "^7.24.6",
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0",
+    "nodemon": "^3.1.2",
+    "supertest": "^7.0.0"
   }
 }
